# async-transaction-engine

./: .gitignore  Cargo.toml  README.md
diagrams/: actor_architecture.drawio
examples/: generate_stress_test.rs
samples/: fixed.csv  sample.csv  stress_test.csv
src/: main.rs
src/actors/: account_actor.rs  mod.rs  tests.rs
src/engine/: async_engine.rs  mod.rs  tests.rs
src/models/: account.rs  errors.rs  mod.rs  tests.rs  transaction.rs
src/storage/: account_storage.rs  mod.rs  tests.rs
src/types/: errors.rs  mod.rs  monetary.rs  tests.rs
tests/: integration_test.rs
