[package]
name = "async-transaction-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["sync", "rt-multi-thread", "macros", "time"] }
tracing = { version = "0.1.44", features = [] }
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }
thiserror = { version = "2.0.18", features = [] }
anyhow = { version = "1.0.100", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
csv = { version = "1.4.0", features = [] }
moka = { version = "0.12.13", features = ["future"] }
dashmap = { version = "6.1.0", features = [] }

[[bin]]
name = "async-transaction-engine"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
debug-assertions = false
overflow-checks = false
incremental = false
debug = "none"

[dev-dependencies]
tempfile = "3.24.0"
